# RayTracer

./: CMakeLists.txt  ToDoList.txt
include/: Camera.hpp  ImagePlane.hpp  IntersectionPoint.hpp  LightSource.hpp  Material.hpp  Mesh.hpp  Objects.hpp  RGBColor.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp
src/: Camera.cpp  ImagePlane.cpp  IntersectionPoint.cpp  LightSource.cpp  Material.cpp  Mesh.cpp  Objects.cpp  RGBColor.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp  main.cpp
